# exomonad

./: .dockerignore  .env.example  .env.subagent  .env.template  .gitignore  .jjconfig.toml  .mcp.json  AGENTS.md  ANALYSIS-native-gui-architecture.md  ANNOTATION-GUIDE.md  AUDIT_GUIDE.md  AUDIT_SUMMARY.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  GEMINI.md  GEMINI_NOTES.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEXT.md  PHASE2_ANALYSIS.md  PLAN-tidepool-graph-v2.md  PLAN.md  PRIMING.md  README-MANUAL-ANNOTATION.md  README.md  TASK.md  TASK.md.tmp  TESTING_PLAN.md  TODO.md  TODO.md.tmp  TRAINING-DATA-README.md  TRAINING-V3-README.md  TRAINING_DATASET_README.md  WAIT_FOR_EVENT_DESIGN.md  WORKER_FIXES.md  build  cabal.project  (+33 more)
a2a-agents/: Cargo.toml  README.md  config.apikey.example.json  config.auth.example.json  config.sqlx.example.json
a2a-agents/examples/: test_config_demo.rs  test_handler.rs  test_metrics.rs  test_sqlx_storage.rs
a2a-agents/migrations/: 001_create_reimbursements.sql  001_create_reimbursements_rollback.sql
a2a-agents/static/: styles.css
a2a-agents/templates/: chat.html  expense-form.html  index.html  tasks.html
a2a-mcp/: Cargo.toml
a2a-mcp/examples/: minimal_example.rs
a2a-mcp/src/: client.rs  error.rs  lib.rs
a2a-rs/: CHANGELOG.md  Cargo.toml  README.md
a2a-rs/benches/: a2a_performance.rs
a2a-rs/docs/: SQLx_Storage.md
a2a-rs/examples/: sqlx_storage_demo.rs  websocket_client_server.rs
a2a-rs/migrations/: 001_initial_schema.sql  001_initial_schema_postgres.sql  002_v030_push_configs.sql
a2a-rs/tests/: authenticated_card_test.rs  client_v3_methods_test.rs  integration_test.rs  push_notification_crud_test.rs  spec_compliance_test.rs  sqlx_storage_test.rs  v3_request_response_test.rs  websocket_test.rs
claude-code-test/: claude-code-test.cabal
claude-code-test/app/: Main.hs
claude-code-test/templates/: action.jinja  explore.jinja
claude-code-test/test-fixtures/: config.json  sample.txt
examples/migration/: Cargo.toml  client_sacp.rs
haskell/control-server/: CLAUDE.md  exomonad-control-server.cabal  tidepool-control-server.cabal
haskell/exomonad/: CLAUDE.md  exomonad.cabal
haskell/native-server/: CLAUDE.md  exomonad-native-server.cabal  tidepool-native-server.cabal
haskell/platform/: CLAUDE.md  exomonad-platform.cabal  tidepool-platform.cabal
haskell/proto-test/: proto-test.cabal
haskell/wasm-guest/: CLAUDE.md  exomonad-wasm-guest.cabal  wasm-guest.cabal
human-driven-dev/: README.md  human-driven-dev.cabal
human-driven-dev/app/: Main.hs
human-driven-dev/templates/: my_task.jinja
human-driven-dev/test/: Main.hs
rust/: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md
rust/agent-status/: Cargo.toml
rust/claude-teams-bridge/: Cargo.toml
rust/docker-ctl/: CLAUDE.md  Cargo.toml
rust/docker-spawner/: CLAUDE.md  Cargo.toml
rust/effector/: CLAUDE.md  Cargo.toml
rust/exomonad/: CLAUDE.md  Cargo.toml  build.rs
rust/exomonad-contrib/: Cargo.toml
rust/exomonad-coordinator/: Cargo.toml
rust/exomonad-core/: CLAUDE.md  Cargo.toml  build.rs
rust/exomonad-plugin/: CLAUDE.md  Cargo.toml
rust/exomonad-proto/: CLAUDE.md  Cargo.toml  build.rs
rust/exomonad-repl/: Cargo.toml  README.md
rust/exomonad-runtime/: CLAUDE.md  Cargo.toml  build.rs
rust/exomonad-services/: CLAUDE.md  Cargo.toml
rust/exomonad-shared/: CLAUDE.md  Cargo.toml
rust/exomonad-sidecar/: CLAUDE.md  Cargo.toml
rust/exomonad-ui-protocol/: CLAUDE.md  Cargo.toml
rust/hangar-config/: CLAUDE.md  Cargo.toml
rust/mantle/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  entrypoint.sh  test-workflow.sh
rust/mantle-agent/: CLAUDE.md  Cargo.toml
rust/mantle-hub/: CLAUDE.md  Cargo.toml  Dockerfile
rust/mantle-shared/: CLAUDE.md  Cargo.toml
rust/ssh-proxy/: CLAUDE.md  Cargo.toml
rust/tui-popup/: CLAUDE.md  Cargo.toml
rust/tui-sidebar/: CLAUDE.md  Cargo.toml
rust/tui-spawner/: CLAUDE.md  Cargo.toml
rust/zellij-gen/: CLAUDE.md  Cargo.toml
template/: CLAUDE.md  README.md  cabal.project  justfile  template.cabal
template/app/: GenerateDocs.hs
template/docs/: graph.md
template/templates/: process.jinja
tidepool-core/: CLAUDE.md  tidepool-core.cabal
tidepool-core/app/: TestLLM.hs
tidepool-core/docs/: GUI_ARCHITECTURE.md  graph-v2-guide.md  type_dsl.md
tidepool-core/src/: Tidepool.hs
tidepool-core/test/: CLIGraphSpec.hs  CLIGraphTypes.hs  CLISpec.hs  CallHandlerSpec.hs  ConvertTransitionHintSpec.hs  DispatchGotoSpec.hs  GotoChoiceSpec.hs  GraphValidationSpec.hs  InjectTargetSpec.hs  LLMNodeExecuteSpec.hs  MemorySerializationSpec.hs  MermaidSpec.hs  OneOfSpec.hs  Spec.hs  StructuredOutputSpec.hs
tidepool-dm/: CLAUDE.md  tidepool-dm.cabal
tidepool-dm/app/: Main.hs  MainGUI.hs
tidepool-dm/templates/: compression.jinja  compression.mustache  dm_turn.mustache
tidepool-generated-ts/: CLAUDE.md  tidepool-generated-ts.cabal
tidepool-generated-ts/src/: graphs.ts  protocol.ts  routing.ts
tidepool-generated-ts/static/: jsffi.ts  protocol.ts
tidepool-mcp/: tidepool-mcp.cabal
tidepool-parallel/: CLAUDE.md  tidepool-parallel.cabal
tidepool-parallel/test/: ParallelSpec.hs
tidepool-telegram-hs/: tidepool-telegram-hs.cabal
tidepool-tidying/: tidepool-tidying.cabal
tidepool-tidying/app/: MainTidyGUI.hs
tidepool-tidying/src/: Tidying.hs
tidepool-wasm/: CLAUDE.md  a.out  tidepool-wasm.cabal
tidepool-wasm/app/: GenerateFixtures.hs
tidepool-wasm/codegen/: GeneratePackage.hs
tidepool-wasm/golden/: GenerateGoldenSamples.hs
tidepool-wasm/reactor/: Reactor.hs
tidepool-wasm/test/: CodegenSyncSpec.hs  E2ESpec.hs  ExampleGraphSpec.hs  ExecutorSpec.hs  FfiSpec.hs  HabiticaRoutingGraphSpec.hs  HabiticaTypesSpec.hs  LlmTestGraphSpec.hs  RegistrySpec.hs  (+9 more)
types-first-dev/: .gitignore  BASELINE-PLAN.md  CLAUDE.md  DESIGN-hybrid-tdd.md  DESIGN-v2.md  DOCKER-AUTH.md  HYLOMORPHISM-PLAN.md  IMPLEMENTATION-NOTES.md  NEXT-STEPS.md  SKETCH-types-v2.hs  docker-compose.yml  justfile  mantle-config.example.toml  run-actor-graph.sh  run-experiment.sh  run-test.sh  test-e2e.sh  types-first-dev.cabal
(+2822 files in other folders)
