[workspace]
resolver = "2"
members = [
    "rust/exomonad-proto",
    "rust/exomonad-core",
    "rust/exomonad",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
prost = "0.14"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
duct = "0.13"
futures-util = "0.3"
nix = { version = "0.29", features = ["poll", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
