cabal-version:      3.0
name:               tidepool-sketch
version:            0.1.0.0
synopsis:           Type-safe LLM agent loops with structured state and templates
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists

library
    import:           warnings
    exposed-modules:  
        Tidepool.Effect
        Tidepool.Template
        Tidepool.Tool
        Tidepool.Loop
        Tidepool.Schema
        DM.State
        DM.Output
        DM.Tools
        DM.Context
        DM.Templates
        DM.Loop
    build-depends:
        base >= 4.17 && < 5,
        effectful-core >= 2.3 && < 3,
        effectful-th >= 1.0 && < 2,
        ginger >= 0.10,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3,
        containers >= 0.6 && < 1,
        unordered-containers >= 0.2 && < 1,
        hashable >= 1.4 && < 2,
        vector >= 0.13 && < 1,
        template-haskell >= 2.19 && < 3,
        mtl >= 2.3 && < 3,
        optics >= 0.4 && < 1,
        random >= 1.2 && < 2,
        bytestring >= 0.11 && < 1,
        parsec >= 3.1 && < 4
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators
        QuasiQuotes
        TemplateHaskell

executable tidepool-dm
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        unordered-containers >= 0.2 && < 1,
        tidepool-sketch
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
