cabal-version:      3.0
name:               tidepool-sketch
version:            0.1.0.0
synopsis:           Type-safe LLM agent loops with structured state and templates
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    -- -haddock + -fwrite-interface preserves Haddock comments for TH getDoc
    ghc-options: -Wall -Wno-missing-export-lists -haddock -fwrite-interface

library
    import:           warnings
    exposed-modules:
        Tidepool.Effect
        Tidepool.Machine
        Tidepool.Delta
        Tidepool.Template
        Tidepool.Tool
        Tidepool.Schema
        Tidepool.Storage
        Tidepool.Anthropic.Http
        Tidepool.Anthropic.Client
        Tidepool.Effects.Habitica
        Tidepool.Effects.Obsidian
        Tidepool.Effects.GitHub
        Tidepool.Effects.Calendar
        Tidepool.GUI.Core
        Tidepool.GUI.Handler
        Tidepool.GUI.Server
        Tidepool.GUI.Theme
        Tidepool.GUI.Widgets
        Delta.Agent
        DM.State
        DM.Output
        DM.Tools
        DM.Context
        DM.Templates
        DM.Loop
        DM.Tarot
        DM.CharacterCreation
        DM.GUI.App
        DM.GUI.Theme
        DM.GUI.Widgets.Stats
        DM.GUI.Widgets.Mood
        DM.GUI.Widgets.Clocks
        DM.GUI.Widgets.BetweenScenes
        DM.GUI.Widgets.History
        DM.GUI.Widgets.Dice
        DM.GUI.Widgets.Narrative
        DM.GUI.Widgets.State
        DM.GUI.Widgets.CharacterCreation
        DM.GUI.Widgets.Events
    build-depends:
        base >= 4.17 && < 5,
        effectful-core >= 2.3 && < 3,
        effectful-th >= 1.0 && < 2,
        ginger >= 0.10,
        aeson >= 2.1 && < 3,
        aeson-pretty >= 0.8 && < 1,
        text >= 2.0 && < 3,
        containers >= 0.6 && < 1,
        unordered-containers >= 0.2 && < 1,
        hashable >= 1.4 && < 2,
        vector >= 0.13 && < 1,
        template-haskell >= 2.19 && < 3,
        mtl >= 2.3 && < 3,
        optics >= 0.4 && < 1,
        random >= 1.2 && < 2,
        bytestring >= 0.11 && < 1,
        parsec >= 3.1 && < 4,
        req >= 3.13 && < 4,
        http-client >= 0.7 && < 1,
        modern-uri >= 0.3 && < 1,
        threepenny-gui >= 0.9 && < 1,
        stm >= 2.5 && < 3,
        sqlite-simple >= 0.4.19 && < 0.5,
        direct-sqlite >= 2.3 && < 3,
        uuid >= 1.3 && < 2,
        time >= 1.12 && < 2
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators
        QuasiQuotes
        TemplateHaskell

executable tidepool-dm
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        unordered-containers >= 0.2 && < 1,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        directory >= 1.3 && < 2,
        tidepool-sketch
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot

executable test-llm
    import:           warnings
    main-is:          TestLLM.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        tidepool-sketch
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot

executable tidepool-dm-gui
    import:           warnings
    main-is:          MainGUI.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        stm >= 2.5 && < 3,
        containers >= 0.6 && < 1,
        unordered-containers >= 0.2 && < 1,
        threepenny-gui >= 0.9 && < 1,
        effectful-core >= 2.3 && < 3,
        tidepool-sketch
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
