[package]
name = "a2a-mcp"
version = "0.1.0"
edition = "2024"
authors = ["A2A-RS Contributors"]
description = "Integration between A2A Protocol and Rusty Model Context Protocol (RMCP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/a2a-rs"
keywords = ["a2a", "rmcp", "ai", "agent", "protocol"]
categories = ["ai", "network-programming"]

# Simplify for initial implementation
[dependencies]
# We'll add more dependencies as needed in the future
rmcp = { version = "0.1.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Simple test dependencies for now
