[package]
name = "a2a-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Rust implementation of the Agent-to-Agent (A2A) Protocol"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
readme = "README.md"
keywords = ["agent", "protocol", "jsonrpc", "a2a"]
categories = ["api-bindings", "network-programming"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
base64 = "0.21"
url = { version = "2.4", features = ["serde"] }
bon = "2.3"

# Database - optional
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "chrono", "uuid", "json"], optional = true }

# Async foundation - optional
tokio = { version = "1.32", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"], optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

# HTTP client - optional
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }

# WebSocket - optional
tokio-tungstenite = { version = "0.20", features = ["rustls", "connect", "stream", "handshake"], default-features = false, optional = true }

# HTTP server - optional
axum = { version = "0.8", optional = true }

# Authentication - optional
jsonwebtoken = { version = "9.3", optional = true }
oauth2 = { version = "4.4", optional = true }
openidconnect = { version = "3.5", optional = true }

# Logging - optional
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
# Testing dependencies
proptest = "1.4"
proptest-derive = "0.5"
jsonschema = "0.22"
criterion = { version = "0.5", features = ["html_reports"] }
arbitrary = { version = "1.3", features = ["derive"] }

[features]
default = ["server", "tracing"]
client = ["dep:tokio", "dep:async-trait", "dep:futures"]
http-client = ["client", "dep:reqwest"]
ws-client = ["client", "dep:tokio-tungstenite"]
server = ["dep:tokio", "dep:async-trait", "dep:futures"]
http-server = ["server", "dep:axum"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
ws-server = ["server", "dep:tokio-tungstenite"]
auth = ["dep:jsonwebtoken", "dep:oauth2", "dep:openidconnect", "dep:reqwest"]
sqlx-storage = ["server", "dep:sqlx"]
sqlite = ["sqlx-storage", "sqlx/sqlite"]
postgres = ["sqlx-storage", "sqlx/postgres"]
mysql = ["sqlx-storage", "sqlx/mysql"]
full = ["http-client", "ws-client", "http-server", "ws-server", "tracing", "auth", "sqlite", "postgres"]


[[example]]
name = "http_client_server"
path = "examples/http_client_server.rs"
required-features = ["http-server", "http-client"]

[[example]]
name = "websocket_client_server"
path = "examples/websocket_client_server.rs"
required-features = ["ws-server", "ws-client"]

[[example]]
name = "sqlx_storage_demo"
path = "examples/sqlx_storage_demo.rs"
required-features = ["sqlx-storage", "tracing"]

[[example]]
name = "storage_comparison"
path = "examples/storage_comparison.rs"
required-features = ["server", "tracing"]

[[bench]]
name = "a2a_performance"
harness = false
required-features = ["full"]
