cabal-version:      3.0
name:               human-driven-dev
version:            0.1.0.0
synopsis:           Testbed for human eval of the engine
license:            MIT
author:             Inanna
build-type:         Simple

library
    exposed-modules:
        -- Types
        HumanDrivenDev.Types
        HumanDrivenDev.Types.Core
        HumanDrivenDev.Types.MyTask
        -- Graph definition
        HumanDrivenDev.MyTaskGraph
        HumanDrivenDev.MyTaskContext
        HumanDrivenDev.MyTaskHandlers
        HumanDrivenDev.MyTaskInterpreter
        HumanDrivenDev.MyTaskTemplates
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        containers >= 0.6 && < 1,
        directory >= 1.3 && < 2,
        filepath >= 1.4 && < 2,
        process >= 1.6 && < 2,
        mtl >= 2.2 && < 3,
        ginger >= 0.10 && < 1,
        parsec >= 3.1 && < 4,
        time >= 1.12 && < 2,
        uuid >= 1.3 && < 2,
        tidepool-core,
        tidepool-actor,
        tidepool-session-interpreter,
        tidepool-worktree-interpreter,
        tidepool-cabal-interpreter,
        async >= 2.2 && < 3,
        stm >= 2.5 && < 3,
        yaml >= 0.11 && < 1
    hs-source-dirs:   src
    default-language: GHC2024
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GADTs
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        RecordWildCards
        TemplateHaskell
        TypeFamilies
        TypeOperators
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -haddock

executable human-driven-dev
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        human-driven-dev,
        tidepool-core,
        tidepool-session-interpreter
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

test-suite human-driven-dev-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
    build-depends:
        base >= 4.17 && < 5,
        human-driven-dev,
        tidepool-core,
        hspec >= 2.10 && < 3
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
