[workspace]
resolver = "2"
members = [
    "exomonad",
    "exomonad-shared",
    "exomonad-services",
    "tui-popup",
    "tui-spawner",
    "effector",
    "docker-ctl",
    "agent-status",
    "zellij-gen",
]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
nix = { version = "0.29", features = ["poll", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
