[workspace]
resolver = "2"
members = [
    "exomonad",
    "exomonad-shared",
    "exomonad-services",
    "exomonad-runtime",
    "exomonad-sidecar",
    "tui-popup",
    "tui-spawner",
    "effector",
    "agent-status",
    "zellij-gen",
]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
nix = { version = "0.29", features = ["poll", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }