cabal-version:      3.0
name:               template
version:            0.1.0.0
synopsis:           Minimal tidepool agent template for cold start
license:            MIT
author:             Your Name
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists -haddock

library
    import:           warnings
    exposed-modules:
        Template.Types
        Template.Context
        Template.Templates
        Template.Graph
        Template.Handlers
    build-depends:
        base >= 4.17 && < 5,
        tidepool-core,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        mtl >= 2.3 && < 3,
        ginger >= 0.10,
        parsec >= 3.1 && < 4,
        aeson >= 2.0 && < 3
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveGeneric
        DerivingStrategies
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators
        TemplateHaskell

executable generate-template-docs
    import:           warnings
    main-is:          GenerateDocs.hs
    build-depends:
        base >= 4.17 && < 5,
        template,
        tidepool-core,
        text >= 2.0 && < 3,
        directory >= 1.3 && < 2,
        filepath >= 1.4 && < 2,
        containers >= 0.6 && < 1,
        aeson-pretty >= 0.8 && < 1
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
        TypeApplications
