cabal-version:      3.0
name:               tidepool-core
version:            0.1.0.0
synopsis:           Type-safe LLM agent loops with structured state and templates
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists -Wincomplete-patterns -haddock -fwrite-interface

library
    import:           warnings
    exposed-modules:
        Tidepool
        Tidepool.Effect
        Tidepool.Delta
        Tidepool.Template
        Tidepool.Tool
        Tidepool.Schema
        Tidepool.Storage
        Tidepool.Anthropic.Http
        Tidepool.Anthropic.Client
        Tidepool.Effects.Habitica
        Tidepool.Effects.Obsidian
        Tidepool.Effects.GitHub
        Tidepool.Effects.Calendar
        Tidepool.GUI.Core
        Tidepool.GUI.Handler
        Tidepool.GUI.Server
        Tidepool.GUI.Theme
        Tidepool.GUI.Widgets
        Tidepool.Graph
        Tidepool.Graph.Types
        Tidepool.Graph.Generic
        Tidepool.Graph.Generic.Core
        Tidepool.Graph.Goto
        Tidepool.Graph.Execute
        Tidepool.Graph.Edges
        Tidepool.Graph.Validate
        Tidepool.Graph.Validate.RecordStructure
        Tidepool.Graph.Reify
        Tidepool.Graph.Mermaid
        Tidepool.Graph.Tool
        Tidepool.Graph.Example
        Tidepool.Graph.Example.Context
        Tidepool.Graph.Memory
        Tidepool.Graph.Template
        Tidepool.Graph.Docs
        Tidepool.Question
        Delta.Agent
    build-depends:
        base >= 4.17 && < 5,
        effectful-core >= 2.3 && < 3,
        effectful-th >= 1.0 && < 2,
        ginger >= 0.10,
        aeson >= 2.1 && < 3,
        aeson-pretty >= 0.8 && < 1,
        text >= 2.0 && < 3,
        containers >= 0.6 && < 1,
        unordered-containers >= 0.2 && < 1,
        hashable >= 1.4 && < 2,
        vector >= 0.13 && < 1,
        template-haskell >= 2.19 && < 3,
        mtl >= 2.3 && < 3,
        optics >= 0.4 && < 1,
        random >= 1.2 && < 2,
        bytestring >= 0.11 && < 1,
        parsec >= 3.1 && < 4,
        req >= 3.13 && < 4,
        http-client >= 0.7 && < 1,
        modern-uri >= 0.3 && < 1,
        threepenny-gui >= 0.9 && < 1,
        stm >= 2.5 && < 3,
        sqlite-simple >= 0.4.19 && < 0.5,
        direct-sqlite >= 2.3 && < 3,
        uuid >= 1.3 && < 2,
        time >= 1.12 && < 2
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators
        QuasiQuotes
        TemplateHaskell

executable test-llm
    import:           warnings
    main-is:          TestLLM.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        tidepool-core
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot

test-suite graph-validation-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        GraphValidationSpec
        MemorySerializationSpec
    build-depends:
        base >= 4.17 && < 5,
        hspec >= 2.10 && < 3,
        process >= 1.6 && < 2,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        text >= 2.0 && < 3,
        effectful-core >= 2.3 && < 3,
        tidepool-core
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        OverloadedStrings
        OverloadedRecordDot
        TypeApplications
