cabal-version:      3.0
name:               tidepool-core
version:            0.1.0.0
synopsis:           Type-safe LLM agent loops with structured state and templates
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists -Wincomplete-patterns -haddock -fwrite-interface

library
    import:           warnings
    exposed-modules:
        Tidepool
        Tidepool.WASM
        Tidepool.Effect
        Tidepool.Effect.Metadata
        Tidepool.Effect.Types
        Tidepool.Graph
        Tidepool.Graph.Types
        Tidepool.Graph.Generic
        Tidepool.Graph.Generic.Core
        Tidepool.Graph.Goto
        Tidepool.Graph.Goto.Internal
        Tidepool.Graph.Errors
        Tidepool.Graph.Execute
        Tidepool.Graph.Edges
        Tidepool.Graph.Validate
        Tidepool.Graph.Validate.RecordStructure
        Tidepool.Graph.Reify
        Tidepool.Graph.Memory
    -- Development/tooling modules (excluded from WASM builds)
    if !os(wasi)
      exposed-modules:
        Tidepool.Delta
        Tidepool.Template
        Tidepool.Tool
        Tidepool.Schema
        Tidepool.Tool.Wire
        Tidepool.Tool.Convert
        Tidepool.Graph.CLI
        Tidepool.Graph.Tool
        Tidepool.Graph.Template
        Tidepool.Anthropic.Types
        Tidepool.Effects.Habitica
        Tidepool.Effects.Telegram
        Tidepool.Effects.Obsidian
        Tidepool.Effects.GitHub
        Tidepool.Effects.Calendar
        Tidepool.Effects.Observability
        Tidepool.Effects.UI
        Tidepool.Effects.LLMProvider
        Tidepool.Effects.Issue
        Tidepool.Effects.LSP
        Tidepool.Effects.BD
        Tidepool.Effects.Git
        Tidepool.Graph.Mermaid
        Tidepool.Graph.Example
        Tidepool.Graph.Example.Context
        Tidepool.Graph.Docs
        Tidepool.Question
        Tidepool.Template.DependencyTree
      build-depends:
        tidepool-habitica,
        optparse-applicative >= 0.17 && < 1
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        ginger >= 0.10,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3,
        containers >= 0.6 && < 1,
        unordered-containers >= 0.2 && < 1,
        hashable >= 1.4 && < 2,
        vector >= 0.13 && < 1,
        template-haskell >= 2.19 && < 3,
        mtl >= 2.3 && < 3,
        optics >= 0.4 && < 1,
        random >= 1.2 && < 2,
        bytestring >= 0.11 && < 1,
        parsec >= 3.1 && < 4,
        time >= 1.12 && < 2,
        directory >= 1.3 && < 2,
        filepath >= 1.4 && < 2
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators
        QuasiQuotes
        TemplateHaskell
        -- Graph DSL type-level programming extensions
        AllowAmbiguousTypes
        FlexibleContexts
        FlexibleInstances
        PolyKinds
        RankNTypes
        ScopedTypeVariables
        StandaloneKindSignatures
        TypeApplications
        UndecidableInstances

-- test-llm executable moved to tidepool-platform (requires HTTP client)

test-suite graph-validation-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        CLISpec
        CLITestTypes
        CLIGraphSpec
        CLIGraphTypes
        GraphValidationSpec
        LLMNodeExecuteSpec
        MemorySerializationSpec
        MermaidSpec
        OneOfSpec
        InjectTargetSpec
        GotoChoiceSpec
        CallHandlerSpec
        DispatchGotoSpec
    build-depends:
        base >= 4.17 && < 5,
        hspec >= 2.10 && < 3,
        process >= 1.6 && < 2,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        optparse-applicative >= 0.18 && < 1,
        text >= 2.0 && < 3,
        freer-simple >= 1.2 && < 2,
        tidepool-core
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        OverloadedStrings
        OverloadedRecordDot
        TypeApplications
