cabal-version:      3.0
name:               tidepool-dm
version:            0.1.0.0
synopsis:           Blades in the Dark-style Dungeon Master agent
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists -Wincomplete-patterns -haddock -fwrite-interface

library
    import:           warnings
    exposed-modules:
        DM.Agent
        DM.State
        DM.Output
        DM.Output.Types
        DM.Tools
        DM.Context
        DM.Templates
        DM.Loop
        DM.Tarot
        DM.CharacterCreation
        DM.GUI.App
        DM.GUI.Theme
        DM.GUI.Widgets.Stats
        DM.GUI.Widgets.Mood
        DM.GUI.Widgets.Clocks
        DM.GUI.Widgets.BetweenScenes
        DM.GUI.Widgets.History
        DM.GUI.Widgets.Dice
        DM.GUI.Widgets.Narrative
        DM.GUI.Widgets.State
        DM.GUI.Widgets.CharacterCreation
        DM.GUI.Widgets.Events
    build-depends:
        base >= 4.17 && < 5,
        tidepool-core,
        effectful-core >= 2.3 && < 3,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3,
        containers >= 0.6 && < 1,
        unordered-containers >= 0.2 && < 1,
        vector >= 0.13 && < 1,
        optics >= 0.4 && < 1,
        random >= 1.2 && < 2,
        bytestring >= 0.11 && < 1,
        threepenny-gui >= 0.9 && < 1,
        stm >= 2.5 && < 3,
        time >= 1.12 && < 2
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators
        QuasiQuotes
        TemplateHaskell

executable tidepool-dm
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        unordered-containers >= 0.2 && < 1,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        directory >= 1.3 && < 2,
        tidepool-core,
        tidepool-dm
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot

executable tidepool-dm-gui
    import:           warnings
    main-is:          MainGUI.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        stm >= 2.5 && < 3,
        containers >= 0.6 && < 1,
        unordered-containers >= 0.2 && < 1,
        threepenny-gui >= 0.9 && < 1,
        effectful-core >= 2.3 && < 3,
        tidepool-core,
        tidepool-dm
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot

executable test-schema
    import:           warnings
    main-is:          TestSchema.hs
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        tidepool-core,
        tidepool-dm
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        OverloadedRecordDot
