cabal-version:   3.0
name:            tidepool-generated-ts
version:         0.1.0.0
synopsis:        FFI codegen and TypeScript package generation for Tidepool graphs
description:     Template Haskell splices for FFI exports and TypeScript type generation
                 from GraphRegistry. Produces a standalone npm package with WASM loader.
license:         BSD-3-Clause
author:          Tidepool Authors
maintainer:      tidepool@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall -Wincomplete-patterns -Wredundant-constraints -Wunused-packages

library
    import:           warnings
    exposed-modules:
        Tidepool.Generated.Registry
        Tidepool.Generated.Codegen
        Tidepool.Generated.GraphSpecs
    build-depends:
        base >= 4.17 && < 5,
        aeson >= 2.0,
        bytestring,
        containers,
        directory,
        filepath,
        text,
        -- Dependencies from tidepool ecosystem (no tidepool-wasm to avoid circular dep)
        tidepool-core
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveGeneric
        DerivingStrategies
        DuplicateRecordFields
        LambdaCase
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies

-- Note: The generate-ts-package executable needs tidepool-wasm for GraphRegistry,
-- so it's defined in tidepool-wasm.cabal instead to avoid circular dependency.
