cabal-version:      3.0
name:               tidepool-parallel
version:            0.1.0.0
synopsis:           Parallel execution backend for tidepool graphs
description:        Provides parallel fan-out/fan-in execution for tidepool graph DSL
                    using ki for structured concurrency. Supports GotoAll for parallel
                    dispatch and Merge for result collection with correlation keys.
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists -Wincomplete-patterns -Wredundant-constraints -Wunused-packages

library
    import:           warnings
    exposed-modules:
        Tidepool.Parallel
        Tidepool.Parallel.Dispatch
        Tidepool.Parallel.Merge
        Tidepool.Parallel.Retry
    build-depends:
        base >= 4.17 && < 5,
        ki >= 1.0 && < 2,
        stm >= 2.5 && < 2.6,
        aeson >= 2.1 && < 2.3,
        text >= 2.0 && < 2.2,
        hashable >= 1.4 && < 1.5,
        unordered-containers >= 0.2 && < 0.3,
        tidepool-core

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GADTs
        LambdaCase
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators

test-suite tidepool-parallel-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        ParallelSpec
    build-depends:
        base >= 4.17 && < 5,
        hspec >= 2.10 && < 2.12,
        aeson >= 2.1 && < 2.3,
        ki >= 1.0 && < 2,
        stm >= 2.5 && < 2.6,
        text >= 2.0 && < 2.2,
        time >= 1.9 && < 1.15,
        hashable >= 1.4 && < 1.5,
        unordered-containers >= 0.2 && < 0.3,
        tidepool-core,
        tidepool-parallel
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        DataKinds
        LambdaCase
        OverloadedStrings
        TypeApplications
